[package]
name = "bbapi"
version = "0.1.0"
description = "A simple utility crate for the BoobBot API."
homepage = "https://github.com/BoobBot/bbapi-rust"
documentation = "https://docs.rs/bbapi"
authors = ["william <me@stylite.me>"]
license = "ISC"
readme = "README.md"
keywords = ["boobbot", "API"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
serde = "1.0.90"
serde_derive = "1.0.90"
env_logger = "0.7"